Typography and smaller screen sizes

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -8,11 +8,10 @@
 @import './variables/typography.less';
 @import './variables/viewports.less';
 
-@import './base.less';
-
 @import './markdown-containers.less';
 
 // Partials
+@import './partials/typography.less';
 @import './partials/layout.less';
 @import './partials/heading-container.less';
 @import './partials/row.less';
@@ -20,6 +19,8 @@
 @import './partials/carousel.less';
 @import './partials/platformFeaturesCarousel.less';
 @import './partials/viewport-visibility.less';
+
+@import './base.less';
 
 // Sections
 @import './sections/hero.less';
