--- a/src/styles/variables/typography.less
+++ b/src/styles/variables/typography.less
@@ -4,41 +4,23 @@
 @font-weight-regular: 600;
 @font-weight-bold: 700;
 
-.base-typography {
-  font-family: @font-family-sans;
-  font-weight: @font-weight-regular;
-  line-height: 26px;
-  font-size: 18px;
-}
+@font-size-base: 18px;
+@font-size-h1: 52px;
+@font-size-h2: 40px;
+@font-size-h3: 34px;
+@font-size-subheading: 32px;
+@font-size-paragraph-large: 24px;
+@font-size-paragraph-mid: 18px;
+@font-size-paragraph-small: 16px;
 
-.heading-h1 {
-  line-height: 60px;
-  font-size: 52px;
-  font-weight: @font-weight-regular;
-}
+@line-height-base: 26px;
+@line-height-h1: 60px;
+@line-height-h2: 54px;
+@line-height-h3: 43px;
+@line-height-subheading: 40px;
+@line-height-paragraph-large: 34px;
+@line-height-paragraph-mid: 26px;
+@line-height-paragraph-small: 24px;
 
-.heading-h2 {
-  line-height: 54px;
-  font-size: 40px;
-}
-
-.subheading {
-  line-height: 40px;
-  font-size: 32px;
-}
-
-.paragraph-large {
-  line-height: 34px;
-  font-size: 24px;
-}
-
-.paragraph-mid {
-  line-height: 26px;
-  font-size: 18px;
-}
-
-.paragraph-small {
-  line-height: 24px;
-  font-size: 16px;
-  letter-spacing: 1px;
-}
+@letter-spacing-base: normal;
+@letter-spacing-paragraph-small: 1px;
