--- a/src/styles/variables/sizing.less
+++ b/src/styles/variables/sizing.less
@@ -7,6 +7,7 @@
 // Column spacing
 @layout-grid-gutter: 48px;
 @layout-grid-gutter-tablet: 35px;
+@layout-grid-gutter-mobile: 16px;
 
 // Row spacing
 @layout-grid-margin: 40px;
