--- a/src/styles/partials/viewport-visibility.less
+++ b/src/styles/partials/viewport-visibility.less
@@ -20,3 +20,4 @@
 
 .make-hide-show(tablet-landscape, @viewport-width-tablet-landscape);
 .make-hide-show(tablet-portrait, @viewport-width-tablet-portrait);
+.make-hide-show(mobile, @viewport-width-mobile);
