Hero image on mobile

--- a/src/_includes/nav.ejs
+++ b/src/_includes/nav.ejs
@@ -2,7 +2,7 @@
   <div class="content-container">
     <img class="logo" src="/assets/images/OCF-Logo.svg" alt="OCF Logo" />
     <div class="links-container">
-      <ul class="links-list">
+      <ul class="links-list hide-mobile">
         <% collections[collectionName].filter(section=>
         !section.data.hideInNavigation).forEach((section)=> { %>
         <li>
