--- a/src/styles/sections/blog.less
+++ b/src/styles/sections/blog.less
@@ -8,8 +8,13 @@ section#blog {
     .layout-grid();
     margin-bottom: @layout-grid-margin;
 
-    // On tablet, the design does not follow the 8 column grid, but rather seems to be on its own 3 column grid
+    // The design does not follow the 8 column grid, but rather seems to be on its own 3 column grid
     grid-template-columns: repeat(3, 1fr) !important;
+
+    @media screen and (max-width: @viewport-width-mobile) {
+      // 1 column on mobile
+      grid-template-columns: 1fr !important;
+    }
 
     li {
       a::before {
