--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -16,6 +16,7 @@
 @import './partials/heading-container.less';
 @import './partials/row.less';
 @import './partials/services-table.less';
+@import './partials/services-table-mobile.less';
 @import './partials/carousel.less';
 @import './partials/platformFeaturesCarousel.less';
 @import './partials/viewport-visibility.less';
