--- a/src/_layouts/default.ejs
+++ b/src/_layouts/default.ejs
@@ -42,5 +42,6 @@
   </body>
   <script src="/assets/scripts/renderFormattedDateTimes.js"></script>
   <script src="/assets/scripts/renderFlags.js"></script>
+  <script src="/assets/scripts/createServicesTableMobileDom.js"></script>
   <script src="/assets/scripts/addClassesToSymbolTable.js"></script>
 </html>
