Ensure width are equal

--- a/src/styles/partials/services-table-mobile.less
+++ b/src/styles/partials/services-table-mobile.less
@@ -9,6 +9,10 @@
     padding: @layout-grid-gutter-mobile;
   }
 
+  .table-column {
+    width: 100%;
+  }
+
   // ensure room for prev/next buttons
   .table-heading-row {
     padding-left: 80px;
