--- a/src/styles/partials/services-table-mobile.less
+++ b/src/styles/partials/services-table-mobile.less
@@ -71,9 +71,10 @@
     }
   }
 
+  // Hide after first 3
   &:not(.show-all)
     .table-column
-    .table-row:nth-child(3)
+    .table-row:nth-child(4)
     ~ .table-row:not(.row-footer) {
     display: none;
   }
