--- a/src/_includes/nav.ejs
+++ b/src/_includes/nav.ejs
@@ -1,8 +1,8 @@
 <nav class="main-nav">
-  <div class="content-container">
+  <div class="nav-container content-container">
     <img class="logo" src="/assets/images/OCF-Logo.svg" alt="OCF Logo" />
     <div class="links-container">
-      <ul class="links-list hide-mobile">
+      <ul class="links-list">
         <% collections[collectionName].filter(section=>
         !section.data.hideInNavigation).forEach((section)=> { %>
         <li>
@@ -21,6 +21,11 @@
         <% }) %>
       </ul>
     </div>
-    <a class="cta" href="https://opencollective.com/foundation/apply" target="_blank">Apply</a>
+    <a class="cta hide-tablet-landscape" href="https://opencollective.com/foundation/apply" target="_blank">Apply</a>
+    <button 
+      class="menu-button hidden show-tablet-landscape" 
+      onclick="this.parentElement.classList.toggle('show-menu')">
+      Menu
+    </button>
   </div>
 </nav>
