Apply button in mobile nav

--- a/src/_includes/nav.ejs
+++ b/src/_includes/nav.ejs
@@ -20,6 +20,7 @@
         </li>
         <% }) %>
       </ul>
+      <a class="cta hidden show-tablet-landscape" href="https://opencollective.com/foundation/apply" target="_blank">Apply</a>
     </div>
     <a class="cta hide-tablet-landscape" href="https://opencollective.com/foundation/apply" target="_blank">Apply</a>
     <button 
