--- a/src/styles/variables/viewports.less
+++ b/src/styles/variables/viewports.less
@@ -1,3 +1,3 @@
 @viewport-width-tablet-landscape: 1024px;
 @viewport-width-tablet-portrait: 768px;
-@viewport-width-mobile: 600px; // TODO find correct value
+@viewport-width-mobile: 428px;
