Revert "Use :focus-within instead of class to open menu"
This reverts commit 621ecc07c770ad835757554a7a948f85796ded5e.

--- a/src/_includes/nav.ejs
+++ b/src/_includes/nav.ejs
@@ -25,7 +25,7 @@
     <a class="cta hide-tablet-landscape" href="https://opencollective.com/foundation/apply" target="_blank">Apply</a>
     <button 
       class="menu-button hidden show-tablet-landscape" 
-      onclick="this.focus()">
+      onclick="this.parentElement.classList.toggle('show-menu')">
       Menu
     </button>
   </div>
