Introduce mobile vertical margin

--- a/src/styles/partials/carousel.less
+++ b/src/styles/partials/carousel.less
@@ -70,3 +70,10 @@
     }
   }
 }
+
+@media screen and (max-width: @viewport-width-mobile) {
+  .flickity-enabled {
+    column-gap: @layout-grid-gutter-mobile;
+    row-gap: @layout-grid-gutter-mobile;
+  }
+}
