--- a/src/styles/partials/row.less
+++ b/src/styles/partials/row.less
@@ -45,6 +45,8 @@
 
     @media screen and (max-width: @viewport-width-mobile) {
       padding-right: @layout-grid-gutter-mobile;
+      padding-top: @layout-grid-margin-mobile;
+      padding-bottom: @layout-grid-margin-mobile;
     }
 
     &:last-child {
