--- a/src/styles/sections/blog.less
+++ b/src/styles/sections/blog.less
@@ -14,6 +14,7 @@ section#blog {
     @media screen and (max-width: @viewport-width-mobile) {
       // 1 column on mobile
       grid-template-columns: 1fr !important;
+      margin-bottom: @layout-grid-margin-mobile;
     }
 
     li {
