--- a/src/styles/sections/hero.less
+++ b/src/styles/sections/hero.less
@@ -38,6 +38,7 @@ section#hero {
 
   .heading {
     color: @color-dark-green;
+    margin: 0;
 
     .collective-name {
       color: @font-color-base;
