--- a/src/styles/partials/layout.less
+++ b/src/styles/partials/layout.less
@@ -15,6 +15,7 @@
     // the design shows 4 columns but only ever uses 1, so lets say 1
     grid-template-columns: 1fr;
     column-gap: @layout-grid-gutter-mobile;
+    row-gap: @layout-grid-margin-mobile;
   }
 }
 
@@ -32,6 +33,6 @@
     padding: @layout-grid-margin @layout-grid-gutter-tablet;
   }
   @media screen and (max-width: @viewport-width-mobile) {
-    padding: @layout-grid-margin @layout-grid-gutter-mobile;
+    padding: @layout-grid-margin-mobile @layout-grid-gutter-mobile;
   }
 }
