more marigns for mobile

--- a/src/styles/sections/services.less
+++ b/src/styles/sections/services.less
@@ -42,6 +42,12 @@ section#services {
       }
     }
 
+    @media screen and (max-width: @viewport-width-mobile) {
+      .column {
+        padding: @layout-grid-margin-mobile @layout-grid-gutter-mobile;
+      }
+    }
+
     p {
       .heading-h2();
       align-self: center;
