--- a/src/styles/partials/row.less
+++ b/src/styles/partials/row.less
@@ -119,6 +119,7 @@
       grid-column: span 6;
     }
     @media screen and (max-width: @viewport-width-mobile) {
+      padding-top: 0;
       grid-column: span 1;
     }
   }
