--- a/src/home/docs.ejs
+++ b/src/home/docs.ejs
@@ -13,5 +13,6 @@ position: 6
     class="docs-frame"
     src="https://docs.opencollective.foundation/"
     style="width: 100%; height: 100vh; border: none"
+    loading="lazy"
   ></iframe>
 </div>
