--- a/src/home/hero.ejs
+++ b/src/home/hero.ejs
@@ -104,7 +104,8 @@ hideInNavigation: true
     <div class="column video-wrapper with-borders">
       <iframe class="video" src="https://www.youtube-nocookie.com/embed/269SyUQmL_U?modestbranding=1&rel=0&showinfo=0" title="YouTube video player"
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
+        allowfullscreen
+        loading="lazy"></iframe>
     </div>
   </div>
 </div>
