--- a/src/home/pricing.ejs
+++ b/src/home/pricing.ejs
@@ -22,7 +22,7 @@ hideInNavigation: false
     <p>
       * We take 5% for crowdfunding done on the site. Third-party payment
       processors (like Stripe and Paypal) charge separate fees on each transaction
-      made using their service. Learn more here. We take 4-8% for bank transfers
+      made using their service. We take 4-8% for bank transfers
       and checks: 8% for up to 500k raised; 6% for up to 1 million raised; 4% for
       over a million raised.
     </p>
