--- a/src/home/services.ejs
+++ b/src/home/services.ejs
@@ -19,7 +19,7 @@ hideInNavigation: false
       <li>Apply for a grant</li>
       <li>Offer tax write-offs when people donate</li>
       <li>Create mini-grants for your community</li>
-      <li>Offer prepaid debit cards to your team</li>
+      <li>Offer virtual debit cards to your team</li>
       <li>Reimburse volunteers</li>
       <li>Use an open-source and community-led platform</li>
     </ul>
