--- a/src/home/hero.ejs
+++ b/src/home/hero.ejs
@@ -12,7 +12,7 @@ hideInNavigation: true
         OC Foundation is proud to be the financial and legal home of
         <span class="collective-name"><%= firstCollective.name %> </span> 
         <img class="collective-hero-image mobile-image hidden show-mobile" src="<%- firstCollective.heroImage %>" alt="<%= firstCollective.heroImageAlt %>" />
-        and <%= hostedCollectives.length %>
+        and <%= hostedCollectives.length - 1 %>
         more groups
       </h1>
 
