#31 Heading "we ask…" should be in pricing section

--- a/src/home/pricing.ejs
+++ b/src/home/pricing.ejs
@@ -4,6 +4,11 @@ position: 2
 hideInNavigation: false
 ---
 
+<div class="heading-container">
+  <h2>We ask for 8% of the money raised to pay our team and build technology you ask for.</h2>
+</div>
+
+
 <div class="pricing-graphic-row">
   <div class="pricing-graphic content-container">
     <div class="raised">$1000 raised</div>
