#21 #33 Make some blocks of content editable

--- a/src/home/events.ejs
+++ b/src/home/events.ejs
@@ -62,11 +62,7 @@ _%>
       <h3>Resources for Events</h3>
     </div>
     <div class="column with-borders text-copy">
-      <p>
-        View a recording of our recent Solidarity School workshop here.<br/>
-        Read this PDF for our event on Friday.<br/>
-        Do you have a workshop you want to offer? Contact Mike@opencollective.com
-      </p>
+      <%- markdown(include('../editable-blocks/resources-for-events.md')) %>
     </div>
   </div>
 </div>
