--- a/src/home/services.ejs
+++ b/src/home/services.ejs
@@ -54,5 +54,5 @@ hideInNavigation: false
 </div>
 
 <div class="services-table-container">
-  <%- markdown(include('../services-table.md')) %>
+  <%- markdown(include('../editable-blocks/services-table.md')) %>
 </div>
