--- a/src/home/pricing.ejs
+++ b/src/home/pricing.ejs
@@ -24,13 +24,7 @@ hideInNavigation: false
     <h3>Fees</h3>
     </div>
     <div class="column with-borders text-copy">
-    <p>
-      * We take 5% for crowdfunding done on the site. Third-party payment
-      processors (like Stripe and Paypal) charge separate fees on each transaction
-      made using their service. We take 4-8% for bank transfers
-      and checks: 8% for up to 500k raised; 6% for up to 1 million raised; 4% for
-      over a million raised.
-    </p>
+      <%- markdown(include('../editable-blocks/fees.md')) %>
     </div>
   </div>
 </div>
