--- a/src/styles/sections/blog.less
+++ b/src/styles/sections/blog.less
@@ -15,6 +15,8 @@ section#blog {
       // 1 column on mobile
       grid-template-columns: 1fr !important;
       margin-bottom: @layout-grid-margin-mobile;
+      // custom row gap for a bit more air
+      row-gap: 23px;
     }
 
     li {
