--- a/src/styles/sections/hero.less
+++ b/src/styles/sections/hero.less
@@ -101,7 +101,7 @@ section#hero {
       }
       @media screen and (max-width: @viewport-width-mobile) {
         grid-column: span 1;
-        margin-left: initial;
+        margin-left: -@layout-grid-gutter-mobile;
       }
     }
 
