--- a/src/styles/sections/services.less
+++ b/src/styles/sections/services.less
@@ -10,41 +10,13 @@ section#services {
           grid-column: span 4;
         }
       }
-    }
 
-    @media screen and (max-width: @viewport-width-tablet-portrait) {
-      .content-container {
-        // remove outer content container (outer padding), and instead make each item a content container
-        padding: 0;
-
-        // disable grid
-        display: block;
-      }
-
-      .column {
-        // make each column a content container
-        padding: @layout-grid-margin @layout-grid-gutter-tablet;
-
-        border-right: none;
-        border-bottom: @default-rule;
-        display: block;
+      @media screen and (max-width: @viewport-width-tablet-portrait) {
+        grid-column: 1 / -1;
 
         &.checklist {
           grid-column: 1 / -1;
         }
-
-        &:last-child {
-          border-bottom: none;
-        }
-      }
-      p {
-        margin: 0;
-      }
-    }
-
-    @media screen and (max-width: @viewport-width-mobile) {
-      .column {
-        padding: @layout-grid-margin-mobile @layout-grid-gutter-mobile;
       }
     }
 
@@ -53,13 +25,27 @@ section#services {
       align-self: center;
     }
 
+    @media screen and (max-width: @viewport-width-tablet-portrait) {
+      p {
+        margin: 0;
+      }
+    }
+
+    @media screen and (max-width: @viewport-width-mobile) {
+      p {
+        align-self: start;
+      }
+    }
+
     .checklist {
       .paragraph-large();
 
       list-style: none;
-      margin: 0;
-      padding: @layout-grid-margin @layout-grid-gutter;
-      padding-left: 0; // there's already a grid gap
+      // margin: 0;
+      // padding: @layout-grid-margin @layout-grid-gutter;
+      // padding-left: 0; // there's already a grid gap
+      margin-top: 0;
+      margin-bottom: 0;
 
       li {
         display: flex;
@@ -81,9 +67,6 @@ section#services {
       }
       @media screen and (max-width: @viewport-width-tablet-landscape) {
         padding-right: @layout-grid-gutter-tablet;
-      }
-      @media screen and (max-width: @viewport-width-mobile) {
-        padding: @layout-grid-margin @layout-grid-gutter-mobile;
       }
     }
   }
