Color links in custom blocks

--- a/src/home/events.ejs
+++ b/src/home/events.ejs
@@ -56,7 +56,7 @@ _%>
   </div>
 </div>
 
-<div class="row text-row fees-row">
+<div class="row text-row resources-for-events">
   <div class="content-container">
     <div class="column with-borders text-heading">
       <h3>Resources for Events</h3>
