--- a/src/styles/sections/events.less
+++ b/src/styles/sections/events.less
@@ -138,4 +138,9 @@ section#events {
     .textButton();
     width: 100%;
   }
+
+  .resources-for-events a {
+    color: @color-dark-green;
+    text-decoration: underline;
+  }
 }
