--- a/src/styles/sections/pricing.less
+++ b/src/styles/sections/pricing.less
@@ -53,4 +53,9 @@ section#pricing {
     background-color: #c0feff;
     .subheading();
   }
+
+  .fees-row a {
+    color: @color-dark-green;
+    text-decoration: underline;
+  }
 }
