border under carousel

--- a/src/styles/partials/platformFeaturesCarousel.less
+++ b/src/styles/partials/platformFeaturesCarousel.less
@@ -1,3 +1,7 @@
+.platform-features-carousel-row {
+  border-bottom: @default-rule;
+}
+
 .platform-features-container {
   .platform-feature {
     box-sizing: border-box;
