--- a/src/home/events.ejs
+++ b/src/home/events.ejs
@@ -13,7 +13,7 @@ _%>
   <div class="content content-container">
     <div>
       <h2>Community events</h2>
-      <p>Join our community forum on first fridays of the month to meet the team and other Collectives in a space of mutual
+      <p>Join our Community Forum on first Fridays of the month to meet the team and other Collectives in a space of mutual
       support.</p>
     </div>
 
